Add social network links

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,69 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="./assets/css/portfolio.css">
+    <script src="https://kit.fontawesome.com/581e33120b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width" initial-scale="1.0">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
     <title>Portfolio</title>
 </head>
 <body>
-   
-  <div class="content">
-    <div id="header">
-      <h1>Linda Di Federico<span class="badge badge-secondary"></span></h1>
+  <div class="menu menu-hover-lines">
+    <p><a href="./index.html">About Me</a></p>
+    <p class="active"><a href="./portfolio.html">Portfolio</a></p>
+    <p><a href="./contact.html">Contact</a></p>
+  </div> 
 
-      <ul class="nav justify-content-end">
-        <li class="nav-item">
-          <a class="nav-link" href="./index.html">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./portfolio.html">Portfolio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./contact.html">Contact</a>
-        </li>
-      </ul>
-    </div>
+  <h2>Linda Di Federico</h2>
 
-    <div id="portfolio">
-      <div id="box">
-        <h3>Portfolio</h3>
-
-        <hr>
-            
-        <div class="container">
-          <div class="card-deck">
-            <div class="card mb-4">
-              <img class="card-img-top img-fluid" src="../ldifederico/assets/images/iSommelier.jpg" alt="iSommelier">
-              <div class="card-body">
-                <h4 class="card-title">iSommelier</h4>
-              </div>
-            </div>
-            <div class="card mb-4">
-              <img class="card-img-top img-fluid" src="../ldifederico/assets/images/puzzles.jpeg" alt="Puzzles">
-              <div class="card-body">
-                <h4 class="card-title">Puzzles</h4>
-              </div>
-            </div>
-            <div class="w-100 d-none d-sm-block d-md-none"></div>
-              <div class="card mb-4">
-               <img class="card-img-top img-fluid" src="../ldifederico/assets/images/trailFinder.jpg" alt="TrailFinder">
-                <div class="card-body">
-                <h4 class="card-title">TrailFinder</h4>
-            </div>
-        </div>
-        <div class="w-100 d-none d-lg-block d-xl-none"></div>
-        <div class="card mb-4">
-          <img class="card-img-top img-fluid" src="../ldifederico/assets/images/UEFAwomen.jpg" alt="Women's UEFA">
-          <div class="card-body">
-            <h4 class="card-title">Women's UEFA</h4>
-          </div>
-        </div>
+  <div class="card card-product-hover" id="card">
+    <h3>Latest Works</h3>
+      <img src="./assets/css/screenshotOfBookshelf.png" alt="picture of Bookshelf app" />
+      <div class="card-product-hover-icons">
+        <a href="https://github.com/kevin-on-davis/KLIP_Project" id="icon"><i class="fas fa-code"></i></a>
+        <a href="https://kevin-on-davis.github.io/KLIP_Project/" id="icon"><i class="fas fa-link"></i></a>
       </div>
-    </div>  
-    
-    <footer class="footer">
-      Copyright &copy;
-   </footer>
   </div>
+   
+  <footer class="social-footer">
+    <div class="social-footer-left">
+      <p>Copyright &copy;</p>
+    </div>
+    <div class="social-footer-icons">
+      <div class="rounded-social-buttons">
+        <a class="social-button linkedin" href="https://linkedin.com/in/linda-maria-di-federico"></a>
+        <a class="social-button google-plus" href="https://mail.google.com/mail/u/difedericolinda@gmail.com"></a>
+        <a class="social-button github" href="https://github.com/ldifederico"></a>
+      </div>        
+    </div>
+  </footer>
+
 </body>
-</html>
+</html> 
