--- a/contact.html
+++ b/contact.html
@@ -3,56 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="./assets/css/contact.css">
+    <script src="https://kit.fontawesome.com/581e33120b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
     <title>Contact</title>
 </head>
 <body>
-   
-   <div class="content">
-        <div id="header">
-            <h1>Linda Di Federico<span class="badge badge-secondary"></span></h1>
+    <div class="menu menu-hover-lines">
+        <p class="aboutMe"><a href="./index.html">About Me</a></p>
+        <p class="portfolio"><a href="./portfolio.html">Portfolio</a></p>
+        <p class="active"><a href="./contact.html">Contact</a></p>
+    </div>      
     
-            <ul class="nav justify-content-end">
-                <li class="nav-item">
-                    <a class="nav-link" href="./index.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./contact.html">Contact</a>
-                </li>
-            </ul>
-        </div>
+    <h2>Linda Di Federico</h2>
 
-        <div id="contact">
-            <div id="box">
-                <h3>Contact</h3>
-
-                <hr>
-
-                <form>
-                    <div class="form-group">
-                      <label for="exampleFormControlInput1">Email address</label>
-                      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleFormControlInput1">Name</label>
-                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="John Smith">
-                    </div>
-                    <div class="form-group">
-                      <label for="exampleFormControlTextarea1">Message</label>
-                      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    <section class="contact-us-section">
+        <div class="row medium-unstack">
+            <div class="columns contact-us-section-left">
+                <h3 class="contact-us-header">Contact Me</h3>                          
+                <ul class="contact-us-list">
+                  <li class="address">Toronto, Canada</li>
+                  <li class="email"><a href="mailto:">difedericolinda@gmail.com</a></li>
+                  <li class="phone">+1 647.521.9728</li>
+                </ul>
+            </div>
+            <div class="columns contact-us-section-right">
+                <form class="contact-us-form">
+                    <input type="text" placeholder="Full name">
+                    <input type="email" placeholder="E-mail">
+                    <textarea name="message" id="" rows="8" placeholder="Type your message here"></textarea>
+                    <div class="contact-us-form-actions">
+                        <button type="submit" class="button button-rounded-hover" value="Send it">Submit</button>
                     </div>
                 </form>
             </div>
         </div>
+    </section>      
 
-        <footer class="footer">
-             Copyright &copy;
-        </footer>
-   </div>
+    <footer class="social-footer">
+        <div class="social-footer-left">
+            <p>Copyright &copy;</p>
+        </div>
+        <div class="social-footer-icons">
+            <div class="rounded-social-buttons">
+                <a class="social-button linkedin" href="https://linkedin.com/in/linda-maria-di-federico"></a>
+                <a class="social-button google-plus" href="https://mail.google.com/mail/u/difedericolinda@gmail.com"></a>
+                <a class="social-button github" href="https://github.com/ldifederico"></a>
+            </div>        
+        </div>
+    </footer>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="script.js"></script> 
 
 </body>
 </html>
