--- a/index.html
+++ b/index.html
@@ -3,61 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="./assets/css/index.css">
+    <script src="https://kit.fontawesome.com/581e33120b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
     <title>About Me</title>
 </head>
-<body>
-   
-    <div class="content">
-        <div id="header">
-            <h1>Linda Di Federico<span class="badge badge-secondary"></span></h1>
-         
-            <ul class="nav justify-content-end">
-                <li class="nav-item">
-                    <a class="nav-link" href="./index.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./contact.html">Contact</a>
-                </li>
-            </ul>
-        </div>    
+<body>   
+    <div class="menu menu-hover-lines">
+        <p class="active"><a href="./index.html">About Me</a></p>
+        <p><a href="./portfolio.html">Portfolio</a></p>
+        <p><a href="./contact.html">Contact</a></p>
+    </div> 
 
-        <div class="container">
-            <div class="row">
-                <div class="col-2">
+    <h2>Linda Di Federico</h2>
 
-                </div>
-                <div class="col-8">
-                    <div class="card-title">
-                      <h2>About Me</h2>
-                      <hr>
-                    </div>
-                </div>
+    <div class="about-the-author">
+        <div class="row">
+            <div class="small-12 medium-4 columns" id="column-left">
+                <div class="author-image">
+                    <img src="./assets/images/profilePicture.png">
+                </div>      
             </div>
 
-            <div class="row">
-                <div class="col-1">
-
-                </div>
-                <div class="col-3">
-                    <img src="./assets/images/profilePicture.jpeg" class="card-img" alt="Linda Di Federico">
-                </div>
-                <div class="col-7">
-                    <p>
-                        My name is Linda. I live in downtown Toronto. I was educated and trained as a research scientist. Recently, I have opted to tackle problems from a tech-related perspective to allow remote work that can take place travelling or beside my dogs.
-                    </p>
-                </div>
-            </div>     
+            <div class="small-12 medium-8 columns" id="column-right">
+                <p>Hi.</p>
+                <h4 class="separator-left">I'm Linda Di Federico.</h4>
+                <p>I am a data analyst based in Toronto, Canada.</p>
+                <br>
+                <p>I find trends in big data sets.</p>
+                <br>
+                <div class="button-hover-reveal-wrapper">
+                    <label>Still interested?</label>
+                    <a href="./L Di Federico Resume.pdf" class="button-hover-reveal">Download my resume.</a>
+                </div>        
+            </div>
         </div>
-   </div>
+    </div>  
 
-   <footer class="footer">
-        Copyright &copy;
-   </footer>
+    <footer class="social-footer">
+        <div class="social-footer-left">
+            <p>Copyright &copy;</p>
+        </div>
+        <div class="social-footer-icons">
+            <div class="rounded-social-buttons">
+                <a class="social-button linkedin" href="https://linkedin.com/in/linda-maria-di-federico"></a>
+                <a class="social-button google-plus" href="https://mail.google.com/mail/u/difedericolinda@gmail.com"></a>
+                <a class="social-button github" href="https://github.com/ldifederico"></a>
+            </div>        
+        </div>
+    </footer>  
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="script.js"></script> 
 </body>
 </html>
