--- a/portfolio.html
+++ b/portfolio.html
@@ -1,44 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="./assets/css/portfolio.css">
-    <script src="https://kit.fontawesome.com/581e33120b.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <meta name="viewport" content="width=device-width" initial-scale="1.0">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
-    <title>Portfolio</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" type="text/css" href="./assets/css/portfolio.css">
+  <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Prompt:300&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/581e33120b.js" crossorigin="anonymous"></script>
+  <title>Linda Di Federico</title>
 </head>
-<body>
-  <div class="menu menu-hover-lines">
-    <p><a href="./index.html">About Me</a></p>
-    <p class="active"><a href="./portfolio.html">Portfolio</a></p>
-    <p><a href="./contact.html">Contact</a></p>
-  </div> 
 
-  <h2>Linda Di Federico</h2>
+<body background="./assets/images/background.jpg">
+  
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark" id="header">
+        <a class="navbar-brand" style="color:#f0ce9e; font-size: x-large;">Linda Di Federico</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+          
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">About Me</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="portfolio.html"><span class="sr-only">(current)</span>Portfolio</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
-  <div class="card card-product-hover" id="card">
-    <h3>Latest Works</h3>
-      <img src="./assets/css/screenshotOfBookshelf.png" alt="picture of Bookshelf app" />
-      <div class="card-product-hover-icons">
-        <a href="https://github.com/kevin-on-davis/KLIP_Project" id="icon"><i class="fas fa-code"></i></a>
-        <a href="https://kevin-on-davis.github.io/KLIP_Project/" id="icon"><i class="fas fa-link"></i></a>
+    <div class="row">
+      <div class="card card-product-hover" id="card">
+        <h3>Latest Works</h3>
+          <img src="./assets/images/screenshotOfBookshelf.png" alt="picture of Bookshelf app" />
+          <div class="card-product-hover-icons">
+            <a href="https://github.com/kevin-on-davis/KLIP_Project" id="icon"><i class="fas fa-code"></i></a>
+            <a href="https://kevin-on-davis.github.io/KLIP_Project/" id="icon"><i class="fas fa-link"></i></a>
+          </div>
       </div>
-  </div>
-   
-  <footer class="social-footer">
-    <div class="social-footer-left">
-      <p>Copyright &copy;</p>
     </div>
-    <div class="social-footer-icons">
-      <div class="rounded-social-buttons">
-        <a class="social-button linkedin" href="https://linkedin.com/in/linda-maria-di-federico"></a>
-        <a class="social-button google-plus" href="https://mail.google.com/mail/u/difedericolinda@gmail.com"></a>
-        <a class="social-button github" href="https://github.com/ldifederico"></a>
-      </div>        
-    </div>
-  </footer>
 
+        <footer class="social-footer">
+            <div class="social-footer-left">
+                <p style="font-size: x-small;">Copyright &copy;</p>
+            </div>
+            <div class="social-footer-icons">
+                <div class="rounded-social-buttons">
+                    <a class="social-button linkedin" href="https://linkedin.com/in/linda-maria-di-federico"></a>
+                    <a class="social-button google-plus" href="https://mail.google.com/mail/u/difedericolinda@gmail.com"></a>
+                    <a class="social-button github" href="https://github.com/ldifederico"></a>
+                </div>        
+            </div>
+        </footer>  
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="script.js"></script> 
 </body>
-</html> 
+</html>
