--- a/index.html
+++ b/index.html
@@ -1,58 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="./assets/css/index.css">
-    <script src="https://kit.fontawesome.com/581e33120b.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
-    <title>About Me</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" type="text/css" href="./assets/css/index.css">
+  <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Prompt:300&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/581e33120b.js" crossorigin="anonymous"></script>
+  <title>Linda Di Federico</title>
 </head>
-<body>   
-    <div class="menu menu-hover-lines">
-        <p class="active"><a href="./index.html">About Me</a></p>
-        <p><a href="./portfolio.html">Portfolio</a></p>
-        <p><a href="./contact.html">Contact</a></p>
-    </div> 
 
-    <h2>Linda Di Federico</h2>
+<body background="./assets/images/background.jpg">
+  
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark" id="header">
+        <a class="navbar-brand" style="color:#f0ce9e; font-size: x-large;">Linda Di Federico</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+          
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">About Me<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
-    <div class="about-the-author">
-        <div class="row">
-            <div class="small-12 medium-4 columns" id="column-left">
-                <div class="author-image">
-                    <img src="./assets/images/profilePicture.png">
-                </div>      
+    <div class="row">
+        <div class="about-the-author">
+                <!-- <div class="small-12 medium-4 columns" id="column-left">
+                    <div class="author-image">
+                        <img src="./assets/images/profilePicture.png">
+                    </div>      
+                </div> -->
+            
+                <div class="small-12 medium-8 columns" id="column-right">
+                    <p>Hi.</p>
+                    <h4 class="separator-left">I'm Linda Di Federico.</h4>
+                    <p>I am a data analyst based in Toronto, Canada.</p>
+                    <br>
+                    <p>I find trends in big data sets.</p>
+                    <br>
+                    <div class="button-hover-reveal-wrapper">
+                        <label>Still interested?</label>
+                        <a href="./L Di Federico Resume.pdf" class="button-hover-reveal">Download my resume.</a>
+                    </div>        
+                </div>
+        </div>  
+    </div>
+
+        <footer class="social-footer">
+            <div class="social-footer-left">
+                <p style="font-size: x-small;">Copyright &copy;</p>
             </div>
-
-            <div class="small-12 medium-8 columns" id="column-right">
-                <p>Hi.</p>
-                <h4 class="separator-left">I'm Linda Di Federico.</h4>
-                <p>I am a data analyst based in Toronto, Canada.</p>
-                <br>
-                <p>I find trends in big data sets.</p>
-                <br>
-                <div class="button-hover-reveal-wrapper">
-                    <label>Still interested?</label>
-                    <a href="./L Di Federico Resume.pdf" class="button-hover-reveal">Download my resume.</a>
+            <div class="social-footer-icons">
+                <div class="rounded-social-buttons">
+                    <a class="social-button linkedin" href="https://linkedin.com/in/linda-maria-di-federico"></a>
+                    <a class="social-button google-plus" href="https://mail.google.com/mail/u/difedericolinda@gmail.com"></a>
+                    <a class="social-button github" href="https://github.com/ldifederico"></a>
                 </div>        
             </div>
-        </div>
-    </div>  
-
-    <footer class="social-footer">
-        <div class="social-footer-left">
-            <p>Copyright &copy;</p>
-        </div>
-        <div class="social-footer-icons">
-            <div class="rounded-social-buttons">
-                <a class="social-button linkedin" href="https://linkedin.com/in/linda-maria-di-federico"></a>
-                <a class="social-button google-plus" href="https://mail.google.com/mail/u/difedericolinda@gmail.com"></a>
-                <a class="social-button github" href="https://github.com/ldifederico"></a>
-            </div>        
-        </div>
-    </footer>  
+        </footer>  
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="script.js"></script> 
